@@ -91,7 +91,7 @@ to read this noise.
 One may attach a file to a post.
 Images are automatically rescaled and reduced in size for federation.
 A description, or caption, is encouraged.
-Text files are also supported as attachments.
+Text files and PDFs are also supported as attachments.
 Other formats are not supported.
 .Pp
 One may also check in to a location.
