@@ -2,6 +2,8 @@ changelog
 
 -- next
 
++ Allow PDF attachments. For serious business only.
+
 + "Untag" button to mute part of a thread.
 
 ++ Subscribe to hashtags.
